Shang New Live/src/objects/Feedback_Option__c.object
<CustomObject>
    <fields>
        <fullName>App_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Setting</label>
        <referenceTo>App_Setting__c</referenceTo>
        <relationshipLabel>Feedback Options</relationshipLabel>
        <relationshipName>Feedback_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Description__c</fullName>
        <description>This is used to key in option.</description>
        <label>Feedback Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Option__c</fullName>
        <label>Feedback Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Toilet Paper</fullName>
                </value>
                <value>
                    <fullName>Foul Smell</fullName>
                </value>
                <value>
                    <fullName>Litter Bin Full</fullName>
                </value>
                <value>
                    <fullName>Wet Floor</fullName>
                </value>
                <value>
                    <fullName>Dirty Basin</fullName>
                </value>
                <value>
                    <fullName>Dirty Toilet Bowl</fullName>
                </value>
                <value>
                    <fullName>No Soap</fullName>
                </value>
                <value>
                    <fullName>Faulty Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_Option__c</fullName>
        <formula>IF( ISBLANK(  URL_Image_Option__c  ) ,&quot;&quot;, IMAGE(URL_Image_Option__c , &quot;Icon&quot;, 75,75) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Toilet_Feedback_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_N__c</fullName>
        <label>S/N</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL_Image_Option__c</fullName>
        <label>URL Image Option</label>
        <type>Url</type>
    </fields>
    <label>Feedback Option</label>
    <nameField>
        <displayFormat>{YYYYMM}-FO-{000000}</displayFormat>
        <label>Feedback Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>